working on fetching all the details of the vendor